# backend

./: Caddyfile  Cargo.toml  README.md
crates/authifier/src/: util.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs
crates/core/models/: Cargo.toml
crates/core/models/examples/: model-test.rs  ops-test.rs
crates/core/models/src/: lib.rs
crates/core/models/src/admin/: migrations.rs
crates/core/models/src/admin/migrations/: mod.rs  model.rs  ops.rs
crates/core/models/src/admin/migrations/ops/: mongodb.rs
crates/core/models/src/channels/: channel_invite.rs  mod.rs
crates/delta/: Cargo.toml  DockerfileOwn  DockerfileOwn2  docker-entrypoint.sh
crates/delta/src/: main.rs
crates/delta/src/routes/: mod.rs
crates/delta/src/routes/admin/: fetch.rs  mod.rs
crates/delta/src/routes/bots/: create.rs
crates/delta/src/routes/channels/: channel_delete.rs  channel_mj.rs  message_edit.rs  message_send.rs  midjourney_get.rs  mod.rs
crates/delta/src/routes/customisation/: account_create.rs  create_account.rs  create_account_custom.rs  mod.rs
crates/delta/src/routes/onboard/: complete.rs
crates/delta/src/routes/servers/: member_create.rs  mod.rs  server_create.rs
crates/delta/src/routes/users/: add_friend.rs  send_friend_request.rs
crates/delta/src/util/: const_def.rs  mod.rs  regex.rs
crates/quark/: Cargo.toml
crates/rocket_authifier/: Cargo.toml
crates/rocket_authifier/src/routes/account/: change_password.rs  create_account.rs
