[package]
name = "revolt-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = [ "dep:serde" ]
schema = [ "dep:schemars" ]
default = [ "serde" ]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
schemars = { version = "0.8.8", optional = true }
